@@ -928,7 +928,7 @@ condition|)
 block|{
 name|fmt
 operator|=
-literal|"<optimize waitSearcher=\"%s\" waitFlush=\"%s\" />"
+literal|"<optimize waitSearcher=\"%s\" />"
 expr_stmt|;
 block|}
 elseif|else
@@ -948,7 +948,7 @@ condition|)
 block|{
 name|fmt
 operator|=
-literal|"<commit waitSearcher=\"%s\" waitFlush=\"%s\" />"
+literal|"<commit waitSearcher=\"%s\" />"
 expr_stmt|;
 block|}
 if|if
