@@ -130,9 +130,81 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|UpdateRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|SolrInputDocument
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|util
 operator|.
 name|ExternalPaths
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|EnumSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
 import|;
 end_import
 
@@ -143,6 +215,16 @@ operator|.
 name|junit
 operator|.
 name|BeforeClass
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|After
 import|;
 end_import
 
@@ -160,6 +242,13 @@ name|SolrExampleStreamingTest
 extends|extends
 name|SolrExampleTests
 block|{
+DECL|field|handledException
+specifier|protected
+name|Throwable
+name|handledException
+init|=
+literal|null
+decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|beforeTest
@@ -233,6 +322,8 @@ name|Throwable
 name|ex
 parameter_list|)
 block|{
+name|handledException
+operator|=
 name|lastError
 operator|=
 name|ex
@@ -275,6 +366,218 @@ argument_list|(
 name|ex
 argument_list|)
 throw|;
+block|}
+block|}
+DECL|method|testWaitOptions
+specifier|public
+name|void
+name|testWaitOptions
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// SOLR-3903
+specifier|final
+name|List
+argument_list|<
+name|Throwable
+argument_list|>
+name|failures
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|Throwable
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|ConcurrentUpdateSolrServer
+name|s
+init|=
+operator|new
+name|ConcurrentUpdateSolrServer
+argument_list|(
+literal|"http://127.0.0.1:"
+operator|+
+name|port
+operator|+
+name|context
+argument_list|,
+literal|2
+argument_list|,
+literal|2
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|handleError
+parameter_list|(
+name|Throwable
+name|ex
+parameter_list|)
+block|{
+name|failures
+operator|.
+name|add
+argument_list|(
+name|ex
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+decl_stmt|;
+name|int
+name|docId
+init|=
+literal|42
+decl_stmt|;
+for|for
+control|(
+name|UpdateRequest
+operator|.
+name|ACTION
+name|action
+range|:
+name|EnumSet
+operator|.
+name|allOf
+argument_list|(
+name|UpdateRequest
+operator|.
+name|ACTION
+operator|.
+name|class
+argument_list|)
+control|)
+block|{
+for|for
+control|(
+name|boolean
+name|waitSearch
+range|:
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|true
+argument_list|,
+literal|false
+argument_list|)
+control|)
+block|{
+for|for
+control|(
+name|boolean
+name|waitFlush
+range|:
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|true
+argument_list|,
+literal|false
+argument_list|)
+control|)
+block|{
+name|UpdateRequest
+name|updateRequest
+init|=
+operator|new
+name|UpdateRequest
+argument_list|()
+decl_stmt|;
+name|SolrInputDocument
+name|document
+init|=
+operator|new
+name|SolrInputDocument
+argument_list|()
+decl_stmt|;
+name|document
+operator|.
+name|addField
+argument_list|(
+literal|"id"
+argument_list|,
+name|docId
+operator|++
+argument_list|)
+expr_stmt|;
+name|updateRequest
+operator|.
+name|add
+argument_list|(
+name|document
+argument_list|)
+expr_stmt|;
+name|updateRequest
+operator|.
+name|setAction
+argument_list|(
+name|action
+argument_list|,
+name|waitSearch
+argument_list|,
+name|waitFlush
+argument_list|)
+expr_stmt|;
+name|s
+operator|.
+name|request
+argument_list|(
+name|updateRequest
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+name|s
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|s
+operator|.
+name|blockUntilFinished
+argument_list|()
+expr_stmt|;
+name|s
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+literal|0
+operator|!=
+name|failures
+operator|.
+name|size
+argument_list|()
+condition|)
+block|{
+name|assertEquals
+argument_list|(
+name|failures
+operator|.
+name|size
+argument_list|()
+operator|+
+literal|" Unexpected Exception, starting with..."
+argument_list|,
+literal|null
+argument_list|,
+name|failures
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 block|}
